* Password::equals(), deprecated in 1.33, was removed. Use Password::verify().
* QuickTemplate::setRef(), deprecated in 1.31, was removed. Use set().
* The mediawiki.ui.text module, deprecated in 1.28 and unused, was removed.
* AbstractBlock::mReason, deprecated in 1.34, is no longer public.
* The GetBlockedStatus, deprecated in 1.34, has been removed. Instead, use the
  GetUserBlock hook.
* Parser::serializeHalfParsedText() and the helper functions
  Parser::unserializeHalfParsedText(), Parser::isValidHalfParsedText(),
  StripState::getSubState() and StripState::merge(), deprecated in 1.31, have
  been removed. The helper functions LinkHolderArray::mergeForeign() and
  LinkHolderArray::getSubArray() were also removed.
* Parser::getConverterLanguage(), deprecated in 1.32, was removed. Use
  Parser::getTargetLanguage() instead.
* Parser::getTitle() will throw a TypeError if Parser::$mTitle is
  uninitialized.  This was deprecated in 1.34.
* A number of public methods of Parser were exposed only for
  historical reasons.  They were deprecated in 1.34 and have now been
  made private or removed: doMagicLinks, doDoubleUnderscore,
  doHeadings, doAllQuotes, replaceExternalLinks, replaceInternalLinks,
  replaceInternalLinks2, getVariableValue, initialiseVariables,
  formatHeadings, testPst, testPreprocess, testSrvus,
  areSubpagesAllowed, maybeDoSubpageLink, splitWhitespace,
  createAssocArgs, armorLinks, makeKnownLinkHolder, getImageParams,
  parseLinkParameter, stripAltText, replaceLinkHoldersText.
* …

=== Deprecations in 1.35 ===
* The PHPUnit4And6Compat class, used to provide compatibility with PHPUnit 4, is
  now deprecated. MediaWiki support for PHPUnit 4 ended with the removal of HHVM
  support.
* Revision::getRevisionText(), deprecated in 1.32, now emits deprecation alerts.
* LockManagerGroup::getDefault() and LockManagerGroup::getAny() are deprecated.
  They seem to be unused. Just use get() directly, and catch any exception.