@@ -108,6 +108,7 @@ because of Phabricator reports.
 * AbstractBlock::mReason, deprecated in 1.34, is no longer public.
 * The GetBlockedStatus, deprecated in 1.34, has been removed. Instead, use the
   GetUserBlock hook.
+* Parser::disableCache(), deprecated in 1.28, has been removed.
 * Parser::serializeHalfParsedText() and the helper functions
   Parser::unserializeHalfParsedText(), Parser::isValidHalfParsedText(),
   StripState::getSubState() and StripState::merge(), deprecated in 1.31, have
